# devplatform-demo-sam-app

./: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  .secrets.baseline  Makefile  README.md  create_gh_release.sh  create_gh_release_monorepo.sh  helpers.sh  sonar-project.properties  upload.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
aws-integration-test/: README.md
aws-integration-test/app/record-producer/: pyproject.toml
aws-integration-test/app/record-producer/record-producer/: lambda.py
aws-integration-test/aws-integration/: Dockerfile  README.md  pyproject.toml  run-tests.sh
aws-integration-test/aws-integration/features/: demo.feature  environment.py
aws-integration-test/aws-integration/features/steps/: demo.py
cloudfront/: template.yaml
cross-account/: template.yaml
demo-package/: README.md  template.yaml
hello-world/: jest.config.js  package-lock.json  package.json
node/: Dockerfile  README.md  event.json  fargate-task.json  package-lock.json  package.json  samconfig.toml  server.js  serverless.js  template.yaml  vite.config.js
node-with-waf/: Dockerfile  README.md  package.json  server.js  template.yaml
param-mapping/: README.md  template.yaml
param-sam-cli-config/: samconfig.toml  template.yaml
parameters/: README.md  template.yaml
platform-hosted-zone/: README.md  template.yaml
route53/: README.md  template.yaml
sam-app/: Dockerfile  LukesBucket.yaml  README.md  lambda-test.py  openapi-spec.yaml  package-lock.json  postTrafficHook.js  preTrafficHook.js  run-tests.sh  stepFunction.asl.json  test.sh  (+1 more)
(+195 files in other folders)
