[tool.poetry]
name = "integration"
version = "0.1.0"
description = ""
authors = ["Dale Peakall <dpeakall@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
boto3 = "^1.24.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
