[tool.poetry]
name = "test-producer"
version = "0.1.0"
description = ""
authors = ["Dale Peakall <dpeakall@thoughtworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
moto = "^3.1.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
